--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <link th:href="@{/css/styles.css}" rel="stylesheet"/> 
+   <link th:href="@{/CSS/styles.css}" rel="stylesheet" />
+
     <title>HodlInfo</title>
     <!--<link rel="stylesheet" href="styles.css"> -->
 </head>
